S14P31B109-612 [BE] 부모 상담사 연결 API 확인 및 auth-service 한글 메시지 복구